[x] Apply mobile layout, with only CSS and HTML ; Turn the top and bottom bars, fixed; Turn horizontal overflow on .cards container scrollable

--- a/styles/style.css
+++ b/styles/style.css
@@ -2,6 +2,8 @@
 
 * {
   --green: #32B72F;
+  --gray: #A6A6A6;
+  --black: #333333;
 }
 
 body {
@@ -10,6 +12,7 @@ body {
   font-family: "Roboto", sans-serif;
   font-weight: 400;
   font-style: 16px;
+  color: var(--black);
 
   width: 100%;
 }
@@ -60,8 +63,12 @@ a {
 /* ***************** MAIN CONTENT | CARDS ******************* */
 
 #main-content {
-  position: absolute;
+  position: relative;
   top: 92px;
+  z-index: 0;
+
+  padding-left: 19px;
+  padding-bottom: 108px;
 }
 
 main h2 {
@@ -77,5 +84,86 @@ main h2 {
 }
 
 .cards {
-  margin-top: 31px;
+  display: flex;
+  align-items: center;
+
+  overflow-x: scroll;
+
+  /* IE */
+  -ms-overflow-style: none;
+  /* Firefox */
+  scrollbar-width: none;
+}
+/* Safari and Chrome */
+.cards::-webkit-scrollbar {
+  display: none;
+}
+
+.card {
+  background-color: #fff;
+
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+
+  max-width: 172px;
+  height: 216px;
+
+  padding: 18px 14px 13px;
+  margin-right: 16px;
+  border-radius: 9px;
+}
+
+.card__image {
+  width: 144px;
+  height: 87px;
+
+  margin-bottom: 8px;
+  border-radius: 4px;
+
+  background-size: contain;
+}
+
+.card__title {
+  font-size: 16px;
+  font-weight: 700;
+
+  line-height: 18.75px;
+}
+
+.card__description {
+  color: var(--gray);
+
+  font-size: 15px;
+  font-weight: 300;
+
+  line-height: 17.6px;
+
+  margin: 4px 0;
+}
+
+/* ***************** FOOTER | BOTTOM BAR******************* */
+
+.bottom-bar {
+  position: fixed;
+  bottom: 0;
+  left: 0;
+  right: 0;
+
+  height: 92px;
+  text-align: center;
+
+  background-color: #fff;
+}
+
+.bottom-bar button {
+  background-color: #CBCBCB;
+
+  width: 364px;
+  height: 61px;
+
+  border-radius: 50px;
+  border: none;
+
+  margin: 15px auto;
 }
